--- a/narkomfin.html
+++ b/narkomfin.html
@@ -10,22 +10,22 @@
       body {
         width: 700px;
         margin: 0 auto;
-        font-family: 'PT Sans', serif;
-        background-image: url(dc-online-media-mockup.jpg);
+        font-family: 'PT Sans', sans-serif;
+        /*background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px 20624px;
         background-position: top center;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;*/
       }
 
       /*  Хак для вёрски  */
 
-      h1, h2, h3, h1 + p {
+      /*h1, h2, h3, h1 + p {
         letter-spacing: -0.09px;
       }
 
       p {
         letter-spacing: -0.089px;
-      }
+      }*/
 
       /*  Конец хака  */
 
@@ -41,6 +41,7 @@
       }
 
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -82,6 +83,18 @@
       blockquote + p,
       blockquote + blockquote {
         margin-top: 29px;
+      }
+
+      ul {
+        margin: 39px 0 29px 30px;
+      }
+
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
       }
 
     </style>
