--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,29 +11,7 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-position: top center;
-        background-repeat: no-repeat;
       }
-
-
-      /*  Хак для верстки  */
-
-      h1,
-      h2,
-      h3,
-      h1 + p {
-        letter-spacing: -0.5 px;
-      }
-
-      p {
-        letter-spacing: -0.09 px;
-      }
-
-
-      /*  Конец хака  */
-
 
       h1, h2, h3 {
         font-family: 'PT Sans Caption', sans-serif;
@@ -47,6 +25,7 @@
       }
 
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -91,10 +70,17 @@
         margin-top: 29px;
       }
 
-      li {
-        margin-left: 30px;
+      ul {
+        margin: 29px 0 29px 30px;
       }
 
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
+      }
     </style>
   </head>
   <body>
