--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,11 +11,6 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-position: top center;
-        background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-repeat: no-repeat;
-
       }
 
       /*  Хак для верстки  */
@@ -45,6 +40,7 @@
       }
 
       h1 + p {
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -95,6 +91,18 @@
 
       blockquote {
         font-style: italic;
+      }
+
+      ul {
+        margin: 29px 0 29px 30px;
+      }
+
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
       }
 
     </style>
