--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,16 +11,13 @@
         width: 700px;
         margin: 0 auto;
         font-family: "PT Sans", sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
-        background-size: 800px 20624px;
-        background-position: top center;
-        background-repeat: no-repeat;
+
         letter-spacing: -0.5px;
         }
 
         /* Хак для вёрстки */
 
-        h1,
+        /*h1,
         h2,
         h3,
         h1+p {
@@ -30,7 +27,7 @@
 
         p {
           letter-spacing: -0.1px;
-        }
+        }*/
 
         /* Конец хака */
 
@@ -46,6 +43,7 @@
         }
 
         h1 + p {
+          margin-top: 14px;
           font-family: "PT Sans Caption", sans-serif;
           font-size: 22px;
           line-height: 32px;
@@ -88,6 +86,18 @@
         blockquote + p,
         blockquote + blockquote {
           margin-top: 29px;
+        }
+
+        ul {
+          margin: 29px 0 29px 30px;
+        }
+
+        li {
+          margin: 17px 0;
+        }
+
+        a {
+          color: inherit;
         }
 
 
