--- a/centrosouz.html
+++ b/centrosouz.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Здание Центросоюза</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="stylesheets/layout.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
     <h1>Здание Центросоюза</h1>
