--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="stylesheets/reset.css">
-    <link rel="stylesheet" href="stylesheets/layout.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
   </head>
   <body>
@@ -133,49 +131,7 @@
       <li>М. Я. Гинзбург никогда не жил в доме Наркомфина, несмотря на кочующие в Интернете легенды по этому поводу. В период отделки здания в одной из квартир находилась его мастерская, см. фото. По воспоминаниям старожилов, живших здесь ещё в 1950-х годах, при заселении дома Гинзбургу была предложена в нём квартира, но он отказался, отдав предпочтение жилью традиционной архитектуры.</li>
       <li>Факт отсутствия капитального ремонта дома (помимо окраски фасадов) за все 85 лет его существования никем не оспаривается, но повсеместно отсутствует его объяснение. Объясняется это просто: дом оказался неремонтопригодным. После войны 1941 — 1945 годов в архивах не оказалось детальных чертежей здания, а равным образом и чертежей коммуникаций водоснабжения, канализации и вентиляции. По данным Архнадзора, Гинзбург никогда не публиковал осуществленный вариант планов дома и не упоминал о наличии в нём квартиры Милютина. Как сообщает Е. Б. Овсянникова (2015), «чертежи, чудесным образом, были обнаружены в цюрихском архиве Ле Корбюзье».</li>
       <li>По количеству репрессированных жильцов в годы «большого террора» дом Наркомфина (он же 2-й дом СНК), вероятно, сопоставим лишь с 1-м домом СНК (<a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%94%D0%BE%D0%BC_%D0%BD%D0%B0_%D0%BD%D0%B0%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%BD%D0%BE%D0%B9">Дом на набережной</a>). Жильцы (поголовно советская номенклатура республиканского уровня) не менее двадцати квартир были репрессированы. Практически все они были расстреляны, но были и отбывавшие срок приговора в <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%A3%D0%9B%D0%90%D0%93">ГУЛАГе</a>. И в конце 1950-х в дом ещё наведывались взрослые дети семей, выселенные из дома в 37-м и 38-м годах, желавшие посмотреть на свои квартиры и на тех, кто в них теперь живёт.</li>
-      liСдача Дома Наркомфина (в 1931 году 2-й дом Совнаркома) по времени совпала с открытием 102-этажного небоскреба <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BC%D0%BF%D0%B0%D0%B9%D1%80-%D1%81%D1%82%D0%B5%D0%B9%D1%82-%D0%B1%D0%B8%D0%BB%D0%B4%D0%B8%D0%BD%D0%B3">Эмпайр стейт билдинг</a> в Нью-Йорке. Оба здания носили статусный характер, и каждое из них, в своей стране, являлось техническим, технологическим и культурным прорывом. Эмпайр стейт билдинг сохранил своё значение, и по сей день остается культурным символом Америки — «American cultural icon». Идеи и принципы, заложенные в проект Дома Наркомфина были преданы забвению сразу по его завершении. И нынешнее состояние дома лучше слов свидетельствует об истинной ценности идей обобществления, затем нормирования и распределения всего и вся, ради осуществления которых были уложены в землю миллионы людей.
-    </ul>
-
-    <ul>
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
-
-      <li>
-        <a target="_blank" href="">Text</a>
-      </li>
+      <li>Сдача Дома Наркомфина (в 1931 году 2-й дом Совнаркома) по времени совпала с открытием 102-этажного небоскреба <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BC%D0%BF%D0%B0%D0%B9%D1%80-%D1%81%D1%82%D0%B5%D0%B9%D1%82-%D0%B1%D0%B8%D0%BB%D0%B4%D0%B8%D0%BD%D0%B3">Эмпайр стейт билдинг</a> в Нью-Йорке. Оба здания носили статусный характер, и каждое из них, в своей стране, являлось техническим, технологическим и культурным прорывом. Эмпайр стейт билдинг сохранил своё значение, и по сей день остается культурным символом Америки — «American cultural icon». Идеи и принципы, заложенные в проект Дома Наркомфина были преданы забвению сразу по его завершении. И нынешнее состояние дома лучше слов свидетельствует об истинной ценности идей обобществления, затем нормирования и распределения всего и вся, ради осуществления которых были уложены в землю миллионы людей.
     </ul>
 
   </body>
