--- a/narkomfin.html
+++ b/narkomfin.html
@@ -3,116 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
-    <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
-    <style>
-      body {
-        width: 700px;
-        margin: 0 auto;
-        font-family: 'PT Sans', sans-serif;
-      }
-
-      /*  Хак для верстки  */
-
-      h1,
-      h2,
-      h3,
-      h1 + p {
-        letter-spacing: -0.02px;
-      }
-
-      p {
-        /*letter-spacing: -0.06px;*/
-      }
-
-      /*  Конец хака  */
-
-      h1, h2, h3 {
-        font-family: 'PT Sans Caption', sans-serif;
-        font-weight: bold;
-      }
-
-      h1 {
-        font-size: 40px;
-        line-height: 46px;
-        margin-top: 66px;
-      }
-
-      h1 + p {
-        margin-top: 14px;
-        font-family: 'PT Sans Caption', sans-serif;
-        font-size: 22px;
-        line-height: 32px;
-        color: rgba(0, 0, 0, .4);
-      }
-
-
-
-      h2 {
-        margin-top: 43px;
-        font-size: 32px;
-        line-height: 36px;
-      }
-
-      h2 + p {
-        margin-top: 7px;
-      }
-
-      h3 {
-        margin-top: 36px;
-        font-size: 28px;
-        line-height: 34px;
-      }
-
-      h3 + p {
-        line-height: 34px;
-        margin-top: 6px;
-      }
-
-      p {
-        font-size: 22px;
-        /*line-height: 34px;*/
-        line-height: 34px;
-      }
-
-      p + p,
-      p + blockquote,
-      blockquote + p,
-      blockquote + blockquote {
-        /*margin-top: 30px;*/
-        margin-top: 29px;
-      }
-
-      p, blockquote, li {
-        font-size: 22px;
-        line-height: 34px;
-      }
-
-      blockquote {
-        font-style: italic;
-      }
-
-      ul {
-        margin: 29px 0 29px 30px;
-      }
-
-      li {
-        margin: 17px 0;
-      }
-
-      a {
-        color: inherit;
-      }
-
-    </style>
     </head>
   <body>
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
 
+
     <h2>История создания</h2>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
+
     <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
 
     <h2>Идеология</h2>
@@ -174,7 +77,11 @@
     <p>Эксперимент с устройством раздвижных горизонтальных окон «не достиг цели и вызвал нарекания жильцов». Конструкции скользящих деревянных рам, сходные с изобретенными Ле Корбюзье и Пьером Жаннере, были доработаны с учетом российского климата. Ленточные окна включали два элемента: подвижные и неподвижные. Неподвижные с железобетонными рамами, подвижные — с дубовыми, скользящими на роликах по направляющему рельсу и прижимающимися к бетону рукояткой с эксцентриком. Места прижима в окне с деревянной рамой были обиты брезентом и войлоком. Через пару десятилетий уплотнения износились, бетонные рамы стали осыпаться, обнажая металлическую арматуру, сдвижные элементы окон заклинивали и в зимнее время пропускали холодный воздух.</p>
     <p>Оборудование квартир не удалось сделать идеальным, ни стилистически, ни функционально. Например, там, где удавалось поставить ванну, то это были громоздкие дореволюционные чугунные изделия, занимавшие слишком много места в габаритах первоначально запланированных душевых кабин. Солидная по площади ванная комната была только в квартире Милютина.</p>
 
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
+
     <h3>С бытовой стороны</h3>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
     <p>С бытовой стороны Дом Наркомфина также вызывал множество нареканий. Основой явилось нарушение заложенного в проекте принципа заселения типовых ячеек (квартир), связанного с тяжелейшим жилищным кризисом в СССР. В Доме Наркомфина в 1940-е…1970-е годы были распространены примеры квартир-коммуналок, когда одной из семей приходилось жить в общей комнате, а другой — в спальне. При этом минимальные размеры кухонь и санузлов приводили к скандалам и, в результате, к резкой критике архитектуры авангарда в целом. По-видимому, благополучными исключениями являлись квартиры бывших наркомов Н. Милютина и Н. Семашко.</p>
     <p>Не выдержал Дом Наркомфина и конкуренцию с традиционными в отношении строительных технологий домами, выстроенными по инициативе Моссовета. Если в Доме Наркомфина легкие бетонные блоки разрушались, то толстые и непромерзаемые кирпичные стены домов Моссовета до сих пор отличаются хорошей звукоизоляцией всех помещений и сохраняют микроклимат в квартирах.</p>
     <p>В итоге Дом Наркомфина так и не стал «домом-коммуной переходного типа» — к середине 1930-х годов от этой идеи отказались сами жильцы. Идущую вдоль нижнего коридора галерею, предназначенную для встреч и общения, быстро превратили в индивидуальные кладовки; терраса с садом на крыше так и не была достроена, а общей столовой почти никто не пользовался. Жильцы с удовольствием покупали в столовой готовые блюда, однако предпочитали забирать их с собой в квартиры, а не питаться вместе. В таком виде коммунальный корпус существовал недолго. Через некоторое время общественное питание перестало удовлетворять основную массу жильцов, и кухня стала нерентабельной. Вслед за этим изменилось и назначение двухсветных залов. Они были приспособлены вначале под типографию, а в дальнейшем — под конструкторское бюро.</p>
@@ -184,6 +91,8 @@
 
     <h2>Известные жители</h2>
     <p>Дом заселялся в 1931 году, одновременно с заселением <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%94%D0%BE%D0%BC_%D0%BD%D0%B0_%D0%BD%D0%B0%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%BD%D0%BE%D0%B9">Дома на набережной</a>, ул. Серафимовича, д. 2, представителями советской номенклатуры республиканского уровня — чиновниками и функционерами второй руки. Наиболее заметные из них по своему положению занимали квартиры в верхних этажах и в торцах жилого корпуса. Позднее, в 1937—1938 годах, практически все они были осуждены и расстреляны как «враги народа» (см. Ссылки).</p>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
     <ul>
       <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D1%8E%D1%82%D0%B8%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Н. А. Милютин</a> — в 1924—1929 годах наркомфин РСФСР, в 1929 году председатель Малого СНК — один из идеологов «новых форм социалистического жилища», автор монографии «Соцгород». Квартира Милютина, спроектированная им для своей семьи с согласия М. Гинзбурга, уже после возведения здания, находилась на крыше здания, в помещении, запланированном под вентиляционную камеру, оборудование для которой не было закуплено, из-за нехватки денег. Двухуровневая квартира — первый в мире «пентхауз».</li>
@@ -210,6 +119,8 @@
       <li>Крючков Петр Петрович, кв. 13 — директор Музея А. М. Горького, с женой. После ареста семьи Крючковых в 1938 г. квартира № 13 перешла к семье Н. А. Семашко.</li>
       <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%91%D0%B3%D0%B0%D0%BD,_%D0%9E%D0%BB%D1%8C%D0%B3%D0%B0_%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0">О. П. Бган</a> — советская актриса.</li>
     </ul>
+
+    <img src="images/narkomfin.jpg" alt="Дом Наркомфина" />
 
     <p>С середины 1930-х годов дом № 25, корп. 1 стоял на балансе Совета народных комиссаров, с 1946 года — Совета Министров РСФСР вплоть до конца 1950-х годов. В конце 1950-х годов снят с баланса Совета Министров РСФСР и передан в общегородское подчинение (в ЖЭК).</p>
     <p>За 70 лет существования дома (на 2000 год) не было выполнено ни одного капитального ремонта. В конце 1970-х власти Москвы собирались сделать капремонт, для чего выселили тридцать квартир, но так и не успели.</p>
