--- a/narkomfin.html
+++ b/narkomfin.html
@@ -1,4 +1,4 @@
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,6 +6,72 @@
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
   <body>
+
+    <nav>
+      <ul>
+        <li>
+          <a href="">Дом Наркомфина</a>
+        </li>
+
+        <li>
+          <a href="">История создания</a>
+        </li>
+
+        <li>
+          <a href="">Идеология</a>
+        </li>
+
+        <li>
+          <a href="">Архитектура</a>
+
+          <ul>
+            <li>
+              <a href="">Пространственная организация жилого комплекса</a>
+            </li>
+
+            <li>
+              <a href="">Архитектура жилого дома</a>
+            </li>
+
+            <li>
+              <a href="">Проектные и технологические решения дома Наркомфина</a>
+            </li>
+
+            <li>
+              <a href="">Нарушение концептуального замысла и проектных решений жилого комплекса после окончания строительства</a>
+            </li>
+
+          </ul>
+        </li>
+
+        <li>
+          <a href="">Критика проекта</a>
+          <ul>
+            <li>
+              <a href="">С технической стороны</a>
+            </li>
+
+            <li>
+              <a href="">С бытовой стороны</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="">Известные жители</a>
+        </li>
+
+        <li>
+          <a href="">Современное состояние памятника</a>
+        </li>
+
+        <li>
+          <a href="">Интересные факты о Доме Наркомфина</a>
+        </li>
+      </ul>
+    </nav>
+
+   <article>
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма.</a></p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
@@ -115,13 +181,15 @@
     <p>Зима 2011—2012 годов практически разрушила «коммунальный блок». Доступ в некоторые части Дома, находящиеся в собственности города, небезопасен.</p>
     <p>сего в доме на балансе 46 квартир, больше 30 из них принадлежат компании Александра Сенаторова, который начал скупать квартиры в 2006 году. Сенаторов утверждает, что планирует реставрацию дома. Впрочем, ясности, насколько это действительно будет реставрация, а не коммерческая перестройка, нет. По состоянию на март 2014 года из общей площади (около 4 тыс. кв. м) в собственности группы Сенаторова находится 2,2 тыс. кв. м, ещё 1,3 тыс. м² — на балансе мэрии Москвы, оставшиеся помещения — у пяти собственников квартир.</p>
 
-    <h2>Интересные факты о Доме Наркомфина[править | править вики-текст]</h2>
+    <h2>Интересные факты о Доме Наркомфина</h2>
     <ul>
       <li>Дому Наркомфина посвящено огромное количество публикаций, как в российских, так и в зарубежных источниках. В западных источниках описания дома Наркомфина нередко сопровождается определениями «утопия» и «утопический» англ. utopian housing project. Вместе с тем, в отечественных источниках авторы, по крайней мере советского периода, старались избегать такой трактовки, привычно используя устоявшуюся лексику типа «эксперимент», «экспериментальный», «переходного типа» и т. п., как правило, не акцентируя внимание на его результатах.</li>
       <li>М. Я. Гинзбург никогда не жил в доме Наркомфина, несмотря на кочующие в Интернете легенды по этому поводу. В период отделки здания в одной из квартир находилась его мастерская, см. фото. По воспоминаниям старожилов, живших здесь ещё в 1950-х годах, при заселении дома Гинзбургу была предложена в нём квартира, но он отказался, отдав предпочтение жилью традиционной архитектуры.</li>
       <li>Факт отсутствия капитального ремонта дома (помимо окраски фасадов) за все 85 лет его существования никем не оспаривается, но повсеместно отсутствует его объяснение. Объясняется это просто: дом оказался неремонтопригодным. После войны 1941 — 1945 годов в архивах не оказалось детальных чертежей здания, а равным образом и чертежей коммуникаций водоснабжения, канализации и вентиляции. По данным Архнадзора, Гинзбург никогда не публиковал осуществленный вариант планов дома и не упоминал о наличии в нём квартиры Милютина. Как сообщает Е. Б. Овсянникова (2015), «чертежи, чудесным образом, были обнаружены в цюрихском архиве Ле Корбюзье».</li>
       <li>По количеству репрессированных жильцов в годы «большого террора» дом Наркомфина (он же 2-й дом СНК), вероятно, сопоставим лишь с 1-м домом СНК (<a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%94%D0%BE%D0%BC_%D0%BD%D0%B0_%D0%BD%D0%B0%D0%B1%D0%B5%D1%80%D0%B5%D0%B6%D0%BD%D0%BE%D0%B9">Дом на набережной</a>). Жильцы (поголовно советская номенклатура республиканского уровня) не менее двадцати квартир были репрессированы. Практически все они были расстреляны, но были и отбывавшие срок приговора в ГУЛАГе. И в конце 1950-х в дом ещё наведывались взрослые дети семей, выселенные из дома в 37-м и 38-м годах, желавшие посмотреть на свои квартиры и на тех, кто в них теперь живёт.</li>
       <li>Сдача Дома Наркомфина (в 1931 году 2-й дом Совнаркома) по времени совпала с открытием 102-этажного небоскреба Эмпайр стейт билдинг в Нью-Йорке. Оба здания носили статусный характер, и каждое из них, в своей стране, являлось техническим, технологическим и культурным прорывом. <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BC%D0%BF%D0%B0%D0%B9%D1%80-%D1%81%D1%82%D0%B5%D0%B9%D1%82-%D0%B1%D0%B8%D0%BB%D0%B4%D0%B8%D0%BD%D0%B3">Эмпайр стейт билдинг</a> сохранил своё значение, и по сей день остается культурным символом Америки — «American cultural icon». Идеи и принципы, заложенные в проект Дома Наркомфина были преданы забвению сразу по его завершении. И нынешнее состояние дома лучше слов свидетельствует об истинной ценности идей обобществления, затем нормирования и распределения всего и вся, ради осуществления которых были уложены в землю миллионы людей.</li>
-    </ul>
+     </ul>
+   </article>
+
   </body>
 </html>
