--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+  <nav class="menubar">
+
+    <a class="logo" href="#"></a>
+    <a href="#">О проекте</a>
+
+  </nav>
+
   <nav class="sidebar">
     <ul>
       <li>
