--- a/narkomfin.html
+++ b/narkomfin.html
@@ -9,6 +9,11 @@
   </head>
   <body>
 
+    <nav class="menubar">
+      <a class="logo" href="#"> </a>
+      <a href="#">о проекте</a>
+    </nav>
+
     <nav class="sidebar">
       <ul>
         <li>
@@ -44,14 +49,15 @@
 
         <li>
           <a href="#s5">Критика проекта</a>
-        <ul>
-          <li>
-            <a href="#s5s1">С технической стороны</a>
-          </li>
-          <li>
-            <a href="#s5s2">С бытовой стороны</a>
-          </li>
-        </ul>
+
+          <ul>
+            <li>
+              <a href="#s5s1">С технической стороны</a>
+            </li>
+            <li>
+              <a href="#s5s2">С бытовой стороны</a>
+            </li>
+          </ul>
         </li>
 
         <li>
@@ -65,11 +71,10 @@
         <li>
           <a href="#s8">Интересные факты о Доме Наркомфина</a>
         </li>
-
       </ul>
     </nav>
-    <article>
 
+    <article>
       <h1 id="s1">Дом Наркомфина</h1>
       <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и Игнатия Милиниса для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
       <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
