--- a/narkomfin.html
+++ b/narkomfin.html
@@ -6,24 +6,13 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
-
-</script>
-      $(function() {
-        $('.sidebar a').each(function() {
-          $(this).on('click', function(e) {
-            e.preventDefault();
-            var scrollTo = $(this).attr('href');
-            var whitespace = scrollTo == '#s1' ? 70 : 30
-            $('html,body').animate({
-              scrollTop: $(scrollTo).offset().top - whitespace
-            }, 1000);
-          });
-        });
-      });
-    </script>
-
   </head>
   <body>
+
+    <nav class="menubar">
+      <a class="logo" href="#"></a>
+      <a href="#">О проекте</a>
+    </nav>
 
     <nav class="sidebar">
       <ul>
