--- a/narkomfin.html
+++ b/narkomfin.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.1.1.js" charset="utf-8"></script>
     <script src="javascripts/sidebar.js" charset="utf-8"></script>
-
   </head>
+
   <body>
+
+    <nav class="menubar">
+      <a class="logo" href="#"></a>
+      <a href="#">О проекте</a>
+    </nav>
 
     <nav class="sidebar">
       <ul>
@@ -71,8 +76,7 @@
         <li>
           <a href="#s8">Интересные факты о Доме Наркомфина</a>
         </li>
-      </
-      ul>
+      </ul>
     </nav>
 
     <article>
